use full path to assets

--- a/examples/dragon/views/layout.haml
+++ b/examples/dragon/views/layout.haml
@@ -3,7 +3,7 @@
     %meta{'http-equiv' => "Content-Type", 'content' => "text/html; charset=utf-8"}
     %meta{'name' => "description", 'content' => "Hancock Single Sign On Server"}
     %meta{'name' => "author", 'content' => "Corey Donohoe  / Original design: Andreas Viklund - http://andreasviklund.com/"}
-    %link{'rel' => 'stylesheet', 'type' => 'text/css',  'href' => 'andreas05.css'} 
+    %link{'rel' => 'stylesheet', 'type' => 'text/css',  'href' => '/andreas05.css'} 
     %title Step Right Up
   %body
     #title
