default theme cleanups, reorder form variables, cleanup watir test

--- a/examples/dragon/views/layout.haml
+++ b/examples/dragon/views/layout.haml
@@ -10,6 +10,11 @@
       %h1 Hancock: Single Sign On
     #container
       #sidebar
+        - if session[:user_id]
+          %h2 Applications
+          - Consumer.visible.each do |consumer|
+            %a{:class => 'menu', :href => consumer.url}= consumer.label
+
         %h2 Interact
         - if session[:user_id]
           %a{:class => 'menu', :href => '/sso/logout'} Logout
