consumers are namespaced, sigh

--- a/examples/dragon/views/layout.haml
+++ b/examples/dragon/views/layout.haml
@@ -12,7 +12,7 @@
       #sidebar
         - if session[:user_id]
           %h2 Applications
-          - Consumer.visible.each do |consumer|
+          - ::Hancock::Consumer.visible.each do |consumer|
             %a{:class => 'menu', :href => consumer.url}= consumer.label
 
         %h2 Interact
