--- a/examples/dragon/views/layout.haml
+++ b/examples/dragon/views/layout.haml
@@ -25,6 +25,9 @@
 
         %h2 Thank You
         %a{:class => 'menu', :href => 'http://engineyard.com'} Engine Yard
+        %a{:class => 'menu', :href => 'http://www.sinatrarb.com'} Sinatra
+        %a{:class => 'menu', :href => 'http://www.datamapper.org'} DataMapper
+        %a{:class => 'menu', :href => 'http://andreasviklund.com'}Andreas Viklund
       #main
         %p= yield
         - if session[:user_id]
@@ -35,6 +38,5 @@
           &copy; 2009 Code by
           %a{:href => 'http://engineyard.com'} Engine Yard
           | Design by
-          %a{:href => 'http://andreasviklund.com'}Andreas Viklund
       #footer
 
