--- a/examples/dragon/public/css/andreas05.css
+++ b/examples/dragon/public/css/andreas05.css
@@ -5,7 +5,7 @@ body{
 padding:0;
 margin:0;
 font:76% verdana,tahoma,sans-serif;
-background:#cccccc url(/bodybg.gif) repeat;
+background:#cccccc url(/img/bodybg.gif) repeat;
 color:#303030;
 }
 
@@ -57,7 +57,7 @@ min-height: 340px;
 margin:0 auto 15px auto;
 width:700px;
 padding:10px;
-background:#ffffff url(/front.png) bottom left no-repeat;
+background:#ffffff url(/img/front.png) bottom left no-repeat;
 color:#303030;
 border:20px solid #505050;
 }
